--- a/src/app/graph-list/list/list.component.css
+++ b/src/app/graph-list/list/list.component.css
@@ -28,7 +28,6 @@
 }
 .list .items{
   width: 95%;
-  height: 100px;
   background: #ffffff;
   border-radius: 15px;
   padding: 10px;
@@ -89,7 +88,10 @@
   display: grid;
   grid-auto-flow: column;
   font-size: 11px;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 1px;
 }
+
 .list .sales-v .sv-item   span:nth-child(1){
   margin-left: 20px;
 }
@@ -98,7 +100,6 @@
 }
 .list .sales-v .sv-item   span:nth-child(2)::after{
   content: '3';
-
   font-size: 10px;
   position: absolute;
   top: -5px;
