--- a/src/app/my-chart/my-chart.component.css
+++ b/src/app/my-chart/my-chart.component.css
@@ -12,3 +12,34 @@
 .mychart{
   font-size: 5px;
 }
+.chart-item .items-bar{
+  display: grid;
+  align-items: center;
+  grid-template-columns: 18% 52% 30%;
+  font-weight: 500;
+  color: var(--font-color);
+}
+.chart-item{
+  margin-top: 40px;
+}
+.chart-item .items-bar .name{
+  font-size: 13px;
+}
+.chart-item .items-bar .num{
+  font-size: 15px;
+}
+.chart-item  .bar{
+  margin-top: 10px;
+  width: 100%;
+  height: 5px;
+  background-color: var( --main-color-sec);
+  border-radius: 20px;
+}
+.chart-item  .bar span{
+  border-radius: 20px;
+  display: block;
+  width: 50%;
+  height: 5px;
+  background-color: var(--main-color);
+  color: #00cbc15e;
+}
