--- a/src/app/my-chart/my-chart.component.html
+++ b/src/app/my-chart/my-chart.component.html
@@ -9,6 +9,49 @@
       </div>
       <div class="chart-item">
         <h3>Sales by Station</h3>
+        <div class="items-bar">
+          <img src="../../assets/images/header/gas-station.png" alt="">
+          <span class="name">
+            Station Name
+          </span>
+          <div class="number">
+            <span class="num">62,721</span>
+            <span>m <sup>3</sup> </span>
+          </div>
+        </div>
+        <div class="bar">
+          <span></span>
+        </div>
+      </div>
+      <div class="chart-item">
+        <div class="items-bar">
+          <img src="../../assets/images/header/gas-station.png" alt="">
+          <span class="name">
+            Station Name
+          </span>
+          <div class="number">
+            <span class="num">62,721</span>
+            <span>m <sup>3</sup> </span>
+          </div>
+        </div>
+        <div class="bar">
+          <span></span>
+        </div>
+      </div>
+      <div class="chart-item">
+        <div class="items-bar">
+          <img src="../../assets/images/header/gas-station.png" alt="">
+          <span class="name">
+            Station Name
+          </span>
+          <div class="number">
+            <span class="num">62,721</span>
+            <span>m <sup>3</sup> </span>
+          </div>
+        </div>
+        <div class="bar">
+          <span></span>
+        </div>
       </div>
     </div>
   </div>
