--- a/src/app/header/header-start/header-start.component.html
+++ b/src/app/header/header-start/header-start.component.html
@@ -14,7 +14,7 @@
   <div class="items">
     <div class="item icon ">
       <span class="item point"></span>
-      <img src="../../../assets/images/header/gas-station.png" alt="">
+      <img src="assets/images/header/gas-station.png" alt="">
     </div>
     <div class="item numper">
       20s
