--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container-navbar">
     <div class="items">
       <div class="item item-top">
-        <img class="nav-icon" src="../../assets/images/navbar-icon/PMS.png" alt="">
+        <img class="nav-icon" src="assets/images/navbar-icon/PMS.png" alt="">
       </div>
       <div class="item item-cinter">
         <ul >
@@ -12,7 +12,7 @@
         </ul>
       </div>
       <div class="item item-bottom">
-        <img class="nav-icon" src="../../assets/images/navbar-icon/logout.png" alt="">
+        <img class="nav-icon" src="assets/images/navbar-icon/logout.png" alt="">
       </div>
     </div>
   </div>
