--- a/src/app/graph-list/graph-list.component.html
+++ b/src/app/graph-list/graph-list.component.html
@@ -1,8 +1,14 @@
 
 <div class="graph-list">
   <div class="items">
-    <a routerLink="/bar" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}">graph</a>
-    <a routerLink="/" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}">list</a>
+    <a routerLink="/bar" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}">
+      <img src="../../assets/bar.png" alt="">
+      <span>graph</span>
+    </a>
+    <a routerLink="/" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}">
+      <img src="assets/list.png" alt="">
+      <span>list</span>
+    </a>
 </div>
 </div>
 
