--- a/src/app/my-chart/my-chart.component.html
+++ b/src/app/my-chart/my-chart.component.html
@@ -10,7 +10,7 @@
       <div class="chart-item">
         <h3>Sales by Station</h3>
         <div class="items-bar">
-          <img src="../../assets/images/header/gas-station.png" alt="">
+          <img src="assets/images/header/gas-station.png" alt="">
           <span class="name">
             Station Name
           </span>
@@ -25,7 +25,7 @@
       </div>
       <div class="chart-item">
         <div class="items-bar">
-          <img src="../../assets/images/header/gas-station.png" alt="">
+          <img src="assets/images/header/gas-station.png" alt="">
           <span class="name">
             Station Name
           </span>
@@ -38,19 +38,17 @@
           <span></span>
         </div>
       </div>
-      <div class="chart-item">
+      <div class="chart-item nm">
         <div class="items-bar">
-          <img src="../../assets/images/header/gas-station.png" alt="">
+          <img src="assets/images/header/gas-station.png" alt="">
           <span class="name">
             Station Name
           </span>
           <div class="number">
-            <span class="num">62,721</span>
-            <span>m <sup>3</sup> </span>
+            <span class="num">NM</span>
           </div>
         </div>
         <div class="bar">
-          <span></span>
         </div>
       </div>
     </div>
