--- a/src/app/graph-list/graph-list.component.css
+++ b/src/app/graph-list/graph-list.component.css
@@ -8,20 +8,19 @@
   display: grid;
   justify-items: end;
   grid-auto-flow: column;
-  width: 20%;
   margin-bottom: 1rem;
-  background-color: white;
   border-radius: 20px;
 }
 .graph-list a {
   text-decoration: none;
   color: var(--font-color);
-  /* background: ; */
   padding: 3px 22px;
   border-radius: 20px;
-  width: 45px;
   text-align: center;
-
+  display: grid;
+  grid-auto-flow: column;
+  gap: 10px;
+  background-color: white;
 }
 .graph-list a.active {
   text-decoration: none;
@@ -29,4 +28,8 @@
   background: var(--main-color) ;
   padding: 3px 22px;
   border-radius: 20px;
+}
+.graph-list a img {
+  width: 1rem;
+  
 }
