--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -15,18 +15,18 @@
   grid-template-rows: 20% 55% 25%;
 }
 .nav-icon{
-  width: 60px;
+  width: 4rem;
   cursor: pointer;
 }
 ul {
   display: grid;
-  gap: 25px;
+  gap: 2rem;
 }
 ul li .nav-icon{
   width: 30px;
 }
 .item-bottom .nav-icon{
-  width: 40px;
+  width: 3rem;
 }
 
 
