--- a/src/app/graph-list/graph-list.component.html
+++ b/src/app/graph-list/graph-list.component.html
@@ -2,7 +2,7 @@
 <div class="graph-list">
   <div class="items">
     <a routerLink="/bar" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}">
-      <img src="../../assets/bar.png" alt="">
+      <img src="assets/bar.png" alt="">
       <span>graph</span>
     </a>
     <a routerLink="/" routerLinkActive="active"  [routerLinkActiveOptions]="{exact: true}">
