--- a/src/app/graph-list/list/list.component.css
+++ b/src/app/graph-list/list/list.component.css
@@ -24,7 +24,7 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
+  background: var(--main-color); 
 }
 .list .items{
   width: 95%;
