--- a/src/app/graph-list/graph-list.component.css
+++ b/src/app/graph-list/graph-list.component.css
@@ -10,6 +10,7 @@
   grid-auto-flow: column;
   margin-bottom: 1rem;
   border-radius: 20px;
+  background-color: white;
 }
 .graph-list a {
   text-decoration: none;
