--- a/src/app/header/header-start/header-start.component.html
+++ b/src/app/header/header-start/header-start.component.html
@@ -15,7 +15,7 @@
   <div class="items">
     <div class="item icon ">
       <span class="item point"></span>
-      <img src="assets/gas-station-svgrepo-com.png" alt="">
+      <img src="assets/redo.png" alt="">
     </div>
     <div class="item numper">
       20s
