--- a/src/app/graph-list/graph-list.component.css
+++ b/src/app/graph-list/graph-list.component.css
@@ -11,11 +11,12 @@
   margin-bottom: 1rem;
   border-radius: 20px;
   background-color: white;
+  gap: 10px;
 }
 .graph-list a {
   text-decoration: none;
   color: var(--font-color);
-  padding: 3px 22px;
+  padding: 3px 15px;
   border-radius: 20px;
   text-align: center;
   display: grid;
@@ -23,14 +24,22 @@
   gap: 10px;
   background-color: white;
 }
+.graph-list svg{
+  height: 15px;
+  margin-top: 3px;
+}
+.graph-list a img {
+  width: .8rem;
+  margin-top: 4px;
+}
 .graph-list a.active {
   text-decoration: none;
   color: white;
   background: var(--main-color) ;
-  padding: 3px 22px;
   border-radius: 20px;
 }
-.graph-list a img {
-  width: 1rem;
-  
+.graph-list a.active svg {
+  fill: white;
+   /* stroke: rgb(255, 255, 255); */
+  stroke-width: 1px; 
 }
