--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,32 +1,41 @@
 .navbar{
   background-color: var(--main-color);
-  width: 90px;
+  width: 70px;
   height: 100vh;
   text-align: center;
   border-radius: 0 25px 25px 0;
   position: absolute;
   top: 0px;
   left: 0px;
+  position: fixed;
 }
 .items{
   display: grid;
   height: 100%;
   align-items: center;
-  grid-template-rows: 20% 55% 25%;
+  grid-template-rows: 15% 65% 20%;
 }
 .nav-icon{
-  width: 4rem;
+  width: 2.7rem;
   cursor: pointer;
 }
 ul {
   display: grid;
-  gap: 2rem;
+}
+ul li {
+  padding: 10px 0;
+  transition: .3s;
+}
+ul li:hover {
+  background-color: rgba(255, 255, 255, 0.384);
 }
 ul li .nav-icon{
-  width: 30px;
+  width: 1.7rem;
+  
 }
 .item-bottom .nav-icon{
-  width: 3rem;
+  width: 2rem;
+
 }
 
 
