--- a/src/app/graph-list/list/list.component.css
+++ b/src/app/graph-list/list/list.component.css
@@ -12,36 +12,36 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
+  box-shadow: inset 0 0 5px grey;
   border-radius: 10px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--main-color); 
+  background: var(--main-color);
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--main-color); 
+  background: var(--main-color);
 }
-.list .items{
+.list .items {
   width: 95%;
   background: #ffffff;
   border-radius: 15px;
   padding: 10px;
   color: var(--font-color);
-  
 }
 
-.list .items-title{
+.list .items-title {
   display: grid;
   height: 100%;
   grid-template-columns: 5% 17% 63%;
   gap: 15px;
   width: 100%;
   align-items: baseline;
+  position: relative;
 }
 
 .list .items-title .icon {
@@ -53,19 +53,19 @@
 .list .items-title .icon img {
   width: 30px;
 }
-.list .items-title .icon  .point{
+.list .items-title .icon .point {
   width: 8px;
   height: 8px;
   background-color: var(--main-color);
   border-radius: 50%;
   display: block;
 }
-.list .items-title .name{
+.list .items-title .name {
   line-height: normal;
   font-size: 13px;
   font-weight: 600;
 }
-.list .items-title .name p{
+.list .items-title .name p {
   margin: 0;
   height: 14px;
 }
@@ -73,10 +73,12 @@
   display: grid;
   grid-auto-flow: column;
   gap: 2px;
-  width: 8%;
+  width: 46%;
   grid-column-start: none;
+  cursor: pointer;
+  height: 24px;
 }
-.list .items-title .points span{
+.list .items-title .points span {
   width: 3px;
   height: 3px;
   background-color: var(--font-color);
@@ -92,16 +94,89 @@
   gap: 1px;
 }
 
-.list .sales-v .sv-item   span:nth-child(1){
+.list .sales-v .sv-item span:nth-child(1) {
   margin-left: 20px;
 }
-.list .sales-v .sv-item   span:nth-child(2){
+.list .sales-v .sv-item span:nth-child(2) {
   position: relative;
 }
-.list .sales-v .sv-item   span:nth-child(2)::after{
-  content: '3';
+.list .sales-v .sv-item span:nth-child(2)::after {
+  content: "3";
   font-size: 10px;
   position: absolute;
   top: -5px;
 }
 
+.checkbox-container {
+  position: absolute;
+  background-color: white;
+  box-shadow: 0 0 20px 0px #63636354;
+  width: 25rem;
+  height: 6rem;
+  border-radius: 11px;
+  padding: 10px;
+  z-index: 1000;
+  right: 25px;
+  top: 32px;
+}
+.checkbox-items {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.checkbox-item {
+  display: flex;
+  align-items: center;
+}
+
+.check-title {
+  font-weight: 500;
+}
+
+/* Hide the default checkbox */
+.checkbox-item input[type="checkbox"] {
+  display: none;
+}
+
+/* Style the custom checkbox */
+.checkbox-item label {
+  position: relative;
+  padding-left: 18px;
+  cursor: pointer;
+  font-size: 10px;
+}
+
+/* Create a checkbox icon */
+.checkbox-item label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 14px;
+  height: 14px;
+  border: 2px solid var(--main-color);
+  border-radius: 4px;
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+/* Style the checkbox label when checked */
+.checkbox-item input[type="checkbox"]:checked + label::before {
+  background-color: var(--main-color);
+}
+
+/* Style the checkmark inside the checkbox */
+.checkbox-item input[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 1px;
+  color: #fff;
+  font-size: 16px;
+  line-height: 1;
+}
+.sv-item span:nth-child(1),
+.sv-item span:nth-child(3),
+.sv-item span:nth-child(5) {
+  font-weight: 600;
+}
