--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="item item-cinter">
         <ul >
-          <li *ngFor="let imgItem of imgItems">
+          <li *ngFor="let imgItem of imgItems ; let i = index">
             <img class="nav-icon" src="{{imgItem.imageUrl}}" alt="name">
           </li>
         </ul>
@@ -17,6 +17,36 @@
     </div>
   </div>
 </nav>
+
+
+<!-- <svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="36.622"
+  height="35.597"
+  viewBox="0 0 36.622 35.597"
+  class="two"
+>
+  <defs>
+  </defs>
+  <g transform="translate(2.013 1.5)">
+    <path
+      class="a"
+      d="M19.3,3,3,11.149,19.3,19.3l16.3-8.149Z"
+      transform="translate(-3 -3)"
+    />
+    <path
+      class="a"
+      d="M3,25.5l16.3,8.149L35.6,25.5"
+      transform="translate(-3 -1.052)"
+    />
+    <path
+      class="a"
+      d="M3,18l16.3,8.149L35.6,18"
+      transform="translate(-3 -1.701)"
+    />
+  </g>
+</svg>
+ -->
 
 
 
