--- a/src/app/graph-list/list/list.component.css
+++ b/src/app/graph-list/list/list.component.css
@@ -12,7 +12,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px var(--main-color-sec);
   border-radius: 10px;
 }
 
@@ -71,19 +71,21 @@
 }
 .list .items-title .points {
   display: grid;
-  grid-auto-flow: column;
-  gap: 2px;
   width: 46%;
   grid-column-start: none;
   cursor: pointer;
   height: 24px;
 }
-.list .items-title .points span {
-  width: 3px;
-  height: 3px;
-  background-color: var(--font-color);
-  border-radius: 50%;
-  display: block;
+.list .items-title .points svg {
+  font-size: 16px;
+  padding: 5px;
+
+}
+.list .items-title .points:hover svg {
+  background: #F4DBD4;
+  text-align: center;
+  border-radius: 3px;
+  transition: .1s;
 }
 
 .list .sales-v .sv-item {
